--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,44 @@
-site_name: VisionsTrust
-nav:
+site_name: VisionsTrust Documentation
+site_description: Documentation for VisionsTrust Application & API
+site_author: Visions
+docs_dir: docs
+site_dir: ./site
+copyright: Visions 2024
+theme:
+  name: material
+  features:
+    - content.action.edit
+    - content.action.view
+    - content.code.copy
+
+nav: 
   - Home: index.md
-  - About: about.md
-theme: readthedocs
+  - Application:
+    - Overview: application/overview.md
+    - Onboarding: application/onboarding.md
+    - Dashboard: application/dashboard.md
+    - Discovery: 
+      - Data: application/discovery/data.md
+      - Services: application/discovery/services.md
+      - Projects: application/discovery/projects.md
+    - Registering Resources:
+      - Data: application/registering-resources/data.md
+      - Services: application/registering-resources/services.md
+      - Service Offerings: application/registering-resources/service-offerings.md
+    - Projects:
+      - Overview: application/projects/overview.md
+      - Creating a Project: application/projects/creating-a-project.md
+      - Managing a Project:
+        - Invitations: application/projects/invitations.md
+        - Join Requests: application/projects/join-requests.md
+        - Contributions: application/projects/contributions.md
+      - Project Settings: application/projects/project-settings.md
+    - Negotiation & Contracts:
+      - Peer-to-Peer Negotiation: application/negotiation/peer-to-peer.md
+      - Project Negotiation: application/negotiation/project-negotiation.md
+  - Guide - Your first data exchange:
+    - Requirements: guide/requirements.md
+    - Setting up a connector: guide/setting-up-a-connector.md
+    - Setting up a contract: guide/setting-up-a-contract.md
+    - Data exchange: guide/data-exchange.md
+    - Testing: guide/testing.md
