--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,13 @@ site_author: Visions
 docs_dir: docs
 site_dir: ./site
 repo_url: https://github.com/VisionsOfficial/visionstrust-docs
+edit_uri: blob/main/docs/
 copyright: Visions 2024
+plugins:
+  - search
+  - mermaid2
+markdown_extensions:
+  - attr_list
 theme:
   name: material
   features:
@@ -25,8 +31,7 @@ nav:
       - Dashboard: application/dashboard.md
     - Discovery: 
       - Browsing: application/discovery/index.md
-      - Data: application/discovery/data.md
-      - Services: application/discovery/services.md
+      - Offers: application/discovery/offers.md
       - Projects: application/discovery/projects.md
     - Offers:
       - Overview: application/registering-resources/overview.md
@@ -36,16 +41,18 @@ nav:
     - Projects:
       - Overview: application/projects/overview.md
       - Creating a Project: application/projects/creating-a-project.md
-      - Managing a Project:
-        - Project Settings: application/projects/project-settings.md
-        - Invitations: application/projects/invitations.md
-        - Join Requests: application/projects/join-requests.md
-    - Negotiation & Contracts:
-      - Peer-to-Peer Negotiation: application/negotiation/peer-to-peer.md
-      - Project Negotiation: application/negotiation/project-negotiation.md
+      - Project Settings: application/projects/project-settings.md
+    - Negotiation:
+      - Peer-to-Peer: application/negotiation/peer-to-peer.md
+      - Project:
+        - Project Negotiation: application/negotiation/project-negotiation.md
+        - Invitations: application/negotiation/invitations.md
+        - Join Requests: application/negotiation/join-requests.md
+        - Negotiation Process: application/negotiation/negotiation.md
   - Developers:
     - Requirements: guide/requirements.md
     - Setting up a connector: guide/setting-up-a-connector.md
-    - Setting up a contract: guide/setting-up-a-contract.md
-    - Data exchange: guide/data-exchange.md
+    - Setting up resources: guide/setting-up-technical-resources.md
+    - Integrating consent: guide/setting-up-for-consent.md
+    - API Consumption: guide/api-consumption-flow.md
     - Testing: guide/testing.md
